# torcheggroll

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
data/: minipile_valid_1000.npy
examples/: benchmark.py  nano_classifier.py
examples/nano_egg/: README.md  simple_test.py  train.py
src/torcheggroll/: __init__.py  es.py
tests/: test_es.py  test_vmap.py
